--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,11 @@
   display: none;
 }
 
+body,
+html {
+  height: 100%;
+}
+
 body {
   z-index: 0;
   display: flex;
@@ -11,7 +16,6 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  height: 100vh;
   background: #222 url("../images/dino_js.svg") no-repeat fixed center / contain content-box;
   color: var(--fontColor, #fafafa);
   font-size: var(--fontSize, 1em);
@@ -56,6 +60,7 @@ body {
 
 .screen {
   position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   margin: 2%;
@@ -66,7 +71,7 @@ body {
   color: rgba(240, 240, 240, 0.8);
   justify-content: center;
   align-items: center;
-  will-change: transform;
+  /*will-change: transform;*/
 }
 /*.screen::before {
   position: absolute;
