--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,19 @@
-@import "./module-variables.css";
-
-[hidden] {
-  display: none;
+:root {
+  /*--fontStack: font-family: System, Fixedsys, Consolas, monospace;*/
+  --fontStack: BlinkMacSystemFont, -apple-system, ".SFNSDisplay-Regular", ".SFNSText-Regular", "SF UI Text", "San Francisco", "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", Ubuntu, Cantarell, Helvetica, Arial, sans-serif;
+  --fontColor: #fafafa;
+  --fontSize: 1em;
+  --colorLink: red;
+  --colorLinkHover: green;
 }
 
-body,
+/*[hidden] {
+  display: none;
+}*/
+
+/*inlined*/
+
+/*body,
 html {
   height: 100%;
 }
@@ -27,7 +36,7 @@ body {
   justify-content: center;
   align-items: center;
   line-height: 1.15;
-}
+}*/
 
 .background {
   position: absolute;
@@ -83,11 +92,7 @@ footer small {
   justify-content: space-between;
 }
 
-/**
- * normalize.css:
- * 1. Remove the gray background on active links in IE 10.
- * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
- */
+/**normalize.css*/
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
@@ -139,19 +144,12 @@ small {
   }
 }
 
-.bottom-section {
-  display: flex;
-  align-content: space-between;
-  flex-grow: 1;
-  font-size: 0.6em;
-}
-
 .license {
   display: inline-flex;
   align-items: center;
   margin-right: 1em;
   padding: 0;
-  opacity: 0.6;
+  opacity: 0.4;
   transition: opacity 0.2s;
 }
 
@@ -161,24 +159,18 @@ small {
 
 .jack {
   display: inline-flex;
-  opacity: 0.6;
+  opacity: 0.4;
   transition: opacity 0.2s;
   align-items: center;
   margin-left: 1em;
-}
-
-.jack:hover {
-  opacity: 1;
-}
-
-.jack a {
-  display: inline-flex;
-  align-items: center;
-  margin: 0;
   padding: 0;
   border: 0;
   color: rgba(220, 220, 220, 0.9);
   line-height: 1em;
+}
+
+.jack:hover {
+  opacity: 1;
 }
 
 .hole {
@@ -204,8 +196,6 @@ small {
   content: "";
 }
 
-/* normalized print */
-
 @media print {
   body {
     background: transparent !important;
@@ -220,10 +210,6 @@ small {
 
   a[href]::after {
     content: " (" attr(href) ")";
-  }
-
-  abbr[title]::after {
-    content: " (" attr(title) ")";
   }
 
   a::after {
