--- a/styles/main.css
+++ b/styles/main.css
@@ -1,36 +1,13 @@
+/*
 :root {
-  /*--fontStack: font-family: System, Fixedsys, Consolas, monospace;*/
-  --fontStack: BlinkMacSystemFont, -apple-system, ".SFNSDisplay-Regular", ".SFNSText-Regular", "SF UI Text", "San Francisco", "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", Ubuntu, Cantarell, Helvetica, Arial, sans-serif;
+  --fontStack: font-family: System, Fixedsys, Consolas, monospace;
+  --fontStack: -apple-system, BlinkMacSystemFont, "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", Ubuntu, Cantarell, Helvetica, Arial, sans-serif;
   --fontColor: #fafafa;
   --fontSize: 1em;
   --colorLink: red;
   --colorLinkHover: green;
 }
-
-.background {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: all 300ms;
-  will-change: opacity;
-}
-
-.screen {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  margin: 2%;
-  padding: 5%;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: rgba(240, 240, 240, 0.8);
-  justify-content: center;
-  align-items: center;
-}
+*/
 
 footer,
 header,
@@ -63,6 +40,10 @@ small {
 
 footer small {
   justify-content: space-between;
+}
+
+p {
+  margin: 0.1em;
 }
 
 /**normalize.css*/
@@ -113,56 +94,54 @@ address > a:visited {
   }
 }
 
-.license {
-  display: inline-flex;
-  align-items: center;
-  margin-right: 1em;
-  padding: 0;
-  opacity: 0.4;
-  transition: opacity 0.2s;
+/**end-normalize.css*/
+
+.background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 300ms;
+  will-change: opacity;
 }
 
-.license:hover {
+.screen {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  margin: 2%;
+  padding: 5%;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: rgba(240, 240, 240, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+
+.small-urls {
+  display: inline-flex;
+  align-items: center;
+  opacity: 0.4;
+  margin: .3em .2em 0;
+  padding: 2px 10px;
+}
+
+.small-urls:hover {
   opacity: 1;
+}
+
+.license {
+  margin-right: 1em;
 }
 
 .jack {
-  display: inline-flex;
-  opacity: 0.4;
-  transition: opacity 0.2s;
-  align-items: center;
   margin-left: 1em;
-  padding: 0;
-  border: 0;
+  /* border: 0;
   color: rgba(220, 220, 220, 0.9);
-  line-height: 1em;
-}
-
-.jack:hover {
-  opacity: 1;
-}
-
-.hole {
-  position: relative;
-  margin-left: 5px;
-  overflow: hidden;
-  width: 1.4em;
-  height: 1.4em;
-  border-radius: 50%;
-  background: #b62fd1;
-  background-image: linear-gradient(115deg, #a0038b, #3690c3, #89b225, #fdfd00, #fd0000);
-  content: "";
-}
-
-.hole::after {
-  position: absolute;
-  top: 0.2em;
-  right: 0.2em;
-  width: 1em;
-  height: 1em;
-  border-radius: 50%;
-  background-color: #000;
-  content: "";
+  line-height: 1em; */
 }
 
 @media print {
