change deps, async css approach, print css

--- a/styles/main.css
+++ b/styles/main.css
@@ -168,6 +168,10 @@ address > a:visited {
     page-break-inside: avoid;
   }
 
+  .background {
+    display: none;
+  }
+
   .screen {
     background-color: #fff;
     color: #222;
