add dark theme, eslint serviceworker env, stylelint ignore js, change no sourcemaps on prod, logs, sw, sitemap, remove eslint plugin html

--- a/styles/main.css
+++ b/styles/main.css
@@ -144,6 +144,12 @@ address > a:visited {
   line-height: 1em; */
 }
 
+@media (prefers-color-scheme: dark) {
+  .background {
+    filter: brightness(.8);
+  }
+}
+
 @media print {
   body {
     background: transparent !important;
