--- a/styles/main.css
+++ b/styles/main.css
@@ -97,15 +97,7 @@ address > a:visited {
 /**end-normalize.css*/
 
 .background {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: all 300ms;
-  will-change: opacity;
+  background-size: cover;
 }
 
 .screen {
