--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 /*
 :root {
   --fontStack: font-family: System, Fixedsys, Consolas, monospace;
-  --fontStack: -apple-system, BlinkMacSystemFont, "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", Ubuntu, Cantarell, Helvetica, Arial, sans-serif;
+  --fontStack: -apple-system, "blinkmacsystemfont", ".SFNSDisplay-Regular", ".SFNSText-Regular", "SF UI Text", "San Francisco", "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", "ubuntu", "cantarell", "helvetica", "arial", sans-serif;
   --fontColor: #fafafa;
   --fontSize: 1em;
   --colorLink: red;
