--- a/styles/main.css
+++ b/styles/main.css
@@ -117,7 +117,7 @@ address > a:visited {
   display: inline-flex;
   align-items: center;
   opacity: 0.4;
-  margin: .3em .2em 0;
+  margin: 0.3em 0.2em 0;
   padding: 2px 10px;
 }
 
@@ -131,14 +131,11 @@ address > a:visited {
 
 .jack {
   margin-left: 1em;
-  /* border: 0;
-  color: rgba(220, 220, 220, 0.9);
-  line-height: 1em; */
 }
 
 @media (prefers-color-scheme: dark) {
   .background {
-    filter: brightness(.8);
+    filter: brightness(0.8);
   }
 }
 
@@ -146,6 +143,7 @@ address > a:visited {
   body {
     background: transparent !important;
     text-shadow: none !important;
+    color: #222 !important;
   }
 
   a,
@@ -166,13 +164,13 @@ address > a:visited {
     page-break-inside: avoid;
   }
 
-  .background {
-    display: none;
+  small {
+    flex-direction: column;
   }
 
   .screen {
-    background-color: #fff;
-    color: #222;
+    background-color: transparent !important;
+    color: #222 !important;
   }
 
   .screen::before {
