--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,6 @@
 /*
 :root {
-  --fontStack: font-family: System, Fixedsys, Consolas, monospace;
-  --fontStack: -apple-system, "blinkmacsystemfont", ".SFNSDisplay-Regular", ".SFNSText-Regular", "SF UI Text", "San Francisco", "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", "ubuntu", "cantarell", "helvetica", "arial", sans-serif;
-  --fontColor: #fafafa;
-  --fontSize: 1rem;
-  --colorLink: red;
-  --colorLinkHover: green;
+  --fontFamilyStack: "San Francisco", "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", "ubuntu", "cantarell", "helvetica", "arial", sans-serif;
 }
 */
 
