add abbr description, log prefix, change deps, typo

--- a/styles/main.css
+++ b/styles/main.css
@@ -139,6 +139,14 @@ address > a:visited {
     content: '';
   }
 
+  abbr[title]::after {
+    content: ' (' attr(title) ')';
+  }
+
+  abbr::after {
+    content: '';
+  }
+
   img {
     page-break-inside: avoid;
   }
