--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,8 +21,8 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
-<link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
+<!-- <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin /> -->
+<!-- <link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin /> -->
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
@@ -40,8 +40,49 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
+<!-- <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image, Astro.url)} />
+<meta property="twitter:image" content={new URL(image, Astro.url)} /> -->
+
+<!-- Personal -->
+<title>Artur Parkhisenko - Engineer</title>
+<meta name="description" content="www. www always changes">
+<meta name="keywords" content="Artur Parkhisenko, Engineer, Video Engineer, Video Playback Experience, VPE, ビデオ, 📹">
+<meta name="author" content="Artur Parkhisenko">
+<meta name="application-name" content="Artur Parkhisenko">
+<meta name="HandheldFriendly" content="True">
+<meta name="MobileOptimized" content="320">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+<meta http-equiv="Content-Security-Policy"
+  content="script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; worker-src 'self'; manifest-src 'self'; media-src 'self' blob:; object-src 'none'; base-uri 'none'; img-src 'self' data: https://source.unsplash.com https://images.unsplash.com;">
+
+<meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
+<link rel="canonical" href="https://arturparkhisenko.github.io/">
+<meta name="url" content="https://arturparkhisenko.github.io/">
+
+<!-- <meta property="og:type" content="website" />
+<meta property="og:title" content="Artur Parkhisenko - Engineer">
+<meta property="og:description" content="Video Playback Experience Engineer 📹 ビデオ">
+<meta property="og:image" content="https://arturparkhisenko.github.io/android-chrome-192x192.png">
+<meta property="og:url" content="https://arturparkhisenko.github.io/"> -->
+
+<!-- <meta name="twitter:title" content="Artur Parkhisenko - Engineer">
+<meta name="twitter:description" content="Video Playback Experience Engineer 📹 ビデオ">
+<meta name="twitter:image" content="https://arturparkhisenko.github.io/android-chrome-192x192.png">
+<meta name="twitter:card" content="summary_large_image"> -->
+
+<meta name="theme-color" content="#16161d">
+<meta name="msapplication-TileColor" content="#16161d">
+<link rel="manifest" href="site.webmanifest">
+<link rel="icon" sizes="16x16 32x32 48x48" href="favicon.ico">
+<link rel="icon" sizes="512x512" href="favicon-512x512.png">
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+<link rel="mask-icon" href="safari-pinned-tab.svg" color="#9256ff">
+
+<link rel="dns-prefetch" href="https://pages.github.com/">
+<link rel="preconnect" href="https://source.unsplash.com/">
+<link rel="preconnect" href="https://images.unsplash.com/">
