--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
 }
-@font-face {
+/* @font-face {
 	font-family: 'Atkinson';
 	src: url('/fonts/atkinson-regular.woff') format('woff');
 	font-weight: 400;
@@ -28,9 +28,9 @@
 	font-weight: 700;
 	font-style: normal;
 	font-display: swap;
-}
+} */
 body {
-	font-family: 'Atkinson', sans-serif;
+	/* font-family: 'Atkinson', sans-serif; */
 	margin: 0;
 	padding: 0;
 	text-align: left;
@@ -151,4 +151,188 @@ hr {
 	clip-path: inset(50%);
 	/* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
+}
+
+/* Personal */
+
+:root {
+  --fontFamilyStack: "San Francisco", "Noto Sans", "Helvetica Neue", "Roboto", "Droid Sans", "Oxygen", "Lucida Grande", "Segoe UI", "Fira Sans", "ubuntu", "cantarell", "helvetica", "arial", sans-serif;
+}
+
+body {
+  /* z-index: 0; */
+  /* display: -webkit-box; */
+  /* display: flex; */
+  /* overflow: hidden; */
+  /* box-sizing: border-box; */
+  /* margin: 0; */
+  /* padding: 0; */
+  background: #222 url(dino_js.svg) no-repeat fixed 50%/contain content-box;
+  /* color: #fafafa; */
+  /* font-size: 1rem; */
+  font-family: var(--fontFamilyStack);
+  direction: ltr;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  /* -webkit-box-flex: 1; */
+  /* flex: 1 0 auto; */
+  /* -webkit-box-pack: center; */
+  /* justify-content: center; */
+  /* -webkit-box-align: center; */
+  /* align-items: center; */
+  /* line-height: 1.15; */
+}
+
+a,
+a:visited {
+  color: #fff;
+}
+
+.screen {
+  background-color: #1d1d1d;
+}
+
+h1 {
+  margin: 0;
+  font-size: 1.6rem;
+}
+
+em {
+  font-size: 1.4rem;
+}
+
+small {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+p {
+  margin: 0.1rem;
+}
+
+/**normalize.css*/
+a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+}
+
+a,
+a:visited {
+  margin: 0.3rem;
+  padding-left: 10px;
+  line-height: 1.6rem;
+  color: #dcdcdc;
+  cursor: pointer;
+}
+
+a:active,
+a:hover {
+  color: #f7df31;
+}
+
+address {
+  margin-bottom: 0.5rem;
+}
+
+address>a,
+address>a:visited {
+  display: inline-block;
+}
+
+::selection {
+  background: #f7df31;
+}
+
+@media all and (min-width: 40rem) and (min-height: 20rem) {
+  html {
+    font-size: 140%;
+  }
+
+  .screen {
+    padding: 2rem;
+  }
+}
+
+/**end-normalize.css*/
+
+.background {
+  background-size: cover;
+}
+
+.screen {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  margin: 2%;
+  padding: 3% 2% 1%;
+  color: #f0f0f0;
+  justify-content: center;
+  align-items: center;
+}
+
+.small-urls {
+  align-items: center;
+  display: inline-flex;
+  font-family: monospace;
+  opacity: 0.7;
+  padding: 2px 10px;
+}
+
+.small-urls:hover {
+  opacity: 1;
+}
+
+@media (prefers-color-scheme: dark) {
+  .background {
+    filter: brightness(0.8);
+  }
+}
+
+@media print {
+  body {
+    background: transparent !important;
+    text-shadow: none !important;
+    color: #222 !important;
+  }
+
+  a,
+  a:visited {
+    color: #444 !important;
+    text-decoration: underline;
+  }
+
+  a[href]::after {
+    content: ' (' attr(href) ')';
+  }
+
+  a::after {
+    content: '';
+  }
+
+  abbr[title]::after {
+    content: ' (' attr(title) ')';
+  }
+
+  abbr::after {
+    content: '';
+  }
+
+  img {
+    page-break-inside: avoid;
+  }
+
+  small {
+    flex-direction: column;
+  }
+
+  .screen {
+    background-color: transparent !important;
+    color: #222 !important;
+  }
+
+  .screen::before {
+    filter: none;
+  }
 }
