--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,20 +15,7 @@
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
 }
-/* @font-face {
-	font-family: 'Atkinson';
-	src: url('/fonts/atkinson-regular.woff') format('woff');
-	font-weight: 400;
-	font-style: normal;
-	font-display: swap;
-}
-@font-face {
-	font-family: 'Atkinson';
-	src: url('/fonts/atkinson-bold.woff') format('woff');
-	font-weight: 700;
-	font-style: normal;
-	font-display: swap;
-} */
+
 body {
 	/* font-family: 'Atkinson', sans-serif; */
 	margin: 0;
@@ -167,7 +154,7 @@ body {
   /* box-sizing: border-box; */
   /* margin: 0; */
   /* padding: 0; */
-  background: #222 url(dino_js.svg) no-repeat fixed 50%/contain content-box;
+  /* background: #222 url(dino_js.svg) no-repeat fixed 50%/contain content-box; */
   /* color: #fafafa; */
   /* font-size: 1rem; */
   font-family: var(--fontFamilyStack);
