--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,6 +1,8 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
+import '../styles/normalize.css';
+import '../styles/joshwcomeau-reset.css';
 import '../styles/global.css';
 
 interface Props {
@@ -20,10 +22,6 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
-<!-- Font preloads -->
-<!-- <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin /> -->
-<!-- <link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin /> -->
-
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
@@ -31,20 +29,6 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content={Astro.url} />
-<meta property="og:title" content={title} />
-<meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image, Astro.url)} />
-
-<!-- Twitter -->
-<!-- <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content={Astro.url} />
-<meta property="twitter:title" content={title} />
-<meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image, Astro.url)} /> -->
 
 <!-- Personal -->
 <title>Artur Parkhisenko - Engineer</title>
@@ -64,16 +48,17 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <link rel="canonical" href="https://arturparkhisenko.github.io/">
 <meta name="url" content="https://arturparkhisenko.github.io/">
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content={Astro.url} />
+<meta property="og:title" content={title} />
+<meta property="og:description" content={description} />
+<meta property="og:image" content={new URL(image, Astro.url)} />
 <!-- <meta property="og:type" content="website" />
 <meta property="og:title" content="Artur Parkhisenko - Engineer">
 <meta property="og:description" content="Video Playback Experience Engineer 📹 ビデオ">
 <meta property="og:image" content="https://arturparkhisenko.github.io/android-chrome-192x192.png">
 <meta property="og:url" content="https://arturparkhisenko.github.io/"> -->
-
-<!-- <meta name="twitter:title" content="Artur Parkhisenko - Engineer">
-<meta name="twitter:description" content="Video Playback Experience Engineer 📹 ビデオ">
-<meta name="twitter:image" content="https://arturparkhisenko.github.io/android-chrome-192x192.png">
-<meta name="twitter:card" content="summary_large_image"> -->
 
 <meta name="theme-color" content="#16161d">
 <meta name="msapplication-TileColor" content="#16161d">
